# AlliewayAudio_MMFreebies

./: .gitmodules  CMakeLists.txt  README.md  plugin-mm.json
.github/workflows/: build-metamodule-plugin.yml
metamodule-plugins/: AlliewayAudio_Freebies-v2.0.0-dev-11.0.mmplugin  AlliewayAudio_Freebies.mmplugin
